prometheus-operator/components/prometheus-system/prometheus.yaml

apiVersion: v1
kind: Service
metadata:
  name: prometheus-system
  namespace: prometheus
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus.io/name: "system"
