prometheus-operator/components/prometheus-system/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-system-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`prometheus.jed.local`)
    services:
    - name: prometheus-operated
      kind: Service
      port: 9090
      scheme: http
  tls: {}
